syntax = "proto3";

import "nrpc.proto";

package provisioningpb;

service ProvisioningService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {
    option (nrpc.pollingEnabled) = true;
  };
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}
